--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
+    "rc-drawer": "^6.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.21.4"
+    "react-feather": "^2.0.10",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
+    "@types/feather-icons": "^4.29.1",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
@@ -24,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.1",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "postcss": "^8.4.21",
